vlib/v/checker/tests/cast_to_byte_err.vv
type SAlias = string

type CAlias = char
type IAlias = int
type UAlias = u32
type FAlias = f32

fn main() {
	// should be errors:
	_ := u8('hello')
	_ := u8(SAlias('hello'))

	// should be allowed:
	_ := u8(char(1))
	_ := u8(int(1))
	_ := u8(u32(1))
	_ := u8(f32(1.0))

	_ := u8(CAlias(1))
	_ := u8(IAlias(1))
	_ := u8(UAlias(1))
	_ := u8(FAlias(1))
}
